--- a/styles/build.css
+++ b/styles/build.css
@@ -66,7 +66,7 @@ a {
 	#topbar {
 		background-color: black;
 		font-weight: bold;
-		height: 8.8%;
+		height: 13.2%;
 		top: 0;
 		position: fixed;
 		width: 100%;
@@ -121,6 +121,16 @@ a {
 	#edit_profile_table {
 		margin-left: 22%;
 	}
+	#article_table {
+		margin-left: 30%;
+	}
+	#article_title {
+		width: 160px;
+	}
+	#edit_table {
+		margin-left: 17%;
+		width: 100%;
+	}
 	input {
 		width: 2em;
 		margin-left: 0px;
@@ -167,7 +177,7 @@ a {
 	#topbar {
 		background-color: black;
 		font-weight: bold;
-		height: 7.3%;
+		height: 9.8%;
 		top: 0;
 		position: fixed;
 		width: 100%;
@@ -223,6 +233,13 @@ a {
 	#edit_profile_table {
 		margin-left: 30%;
 	}
+	#article_table {
+		margin-left: 38%;
+	}
+	#edit_table {
+		margin-left: 20%;
+		width: 90%;
+	}
 	input {
 		width: 2em;
 		margin-left: 0px;
@@ -265,7 +282,7 @@ a {
 	#topbar {
 		background-color: black;
 		font-weight: bold;
-		height: 7.5%;
+		height: 11%;
 		top: 0;
 		position: fixed;
 		width: 100%;
@@ -321,6 +338,13 @@ a {
 	#edit_profile_table {
 		margin-left: 34%;
 	}
+	#article_table {
+		margin-left: 38%;
+	}
+	#edit_table {
+		margin-left: 24%;
+		width: 80%;
+	}
 	input {
 		width: 2em;
 		margin-left: 0px;
@@ -367,7 +391,7 @@ a {
 	#topbar {
 		background-color: black;
 		font-weight: bold;
-		height: 7.6%;
+		height: 11%;
 		top: 0;
 		position: fixed;
 		width: 100%;
@@ -426,6 +450,13 @@ a {
 	#edit_profile_table {
 		margin-left: 35%;
 	}
+	#article_table {
+		margin-left: 39%;
+	}
+	#edit_table {
+		margin-left: 24%;
+		width: 80%;
+	}
 	input {
 		width: 2em;
 		margin-left: 0px;
@@ -468,7 +499,7 @@ a {
 	#topbar {
 		background-color: black;
 		font-weight: bold;
-		height: 7.6%;
+		height: 11%;
 		top: 0;
 		position: fixed;
 		width: 100%;
@@ -523,6 +554,13 @@ a {
 	}
 	#edit_button {
 		margin-right: 2.5%;
+	}
+	#article_table {
+		margin-left: 42%;
+	}
+	#edit_table {
+		margin-left: 37%;
+		width: 40%;
 	}
 	input {
 		width: 2em;
@@ -583,7 +621,7 @@ a {
 	#topbar {
 		background-color: black;
 		font-weight: bold;
-		height: 8%;
+		height: 11%;
 		top: 0;
 		position: fixed;
 		width: 100%;
@@ -638,6 +676,13 @@ a {
 	}
 	#edit_profile_table {
 		margin-left: 40%;
+	}
+	#article_table {
+		margin-left: 43%;
+	}
+	#edit_table {
+		margin-left: 36%;
+		width: 50%;
 	}
 	input {
 		width: 2em;
@@ -757,6 +802,13 @@ a {
 	#edit_profile_table {
 		margin-left: 30%;
 	}
+	#article_table {
+		margin-left: 38%;
+	}
+	#edit_table {
+		margin-left: 32%;
+		width: 35%;
+	}
 	textarea {
 		overflow: auto;
 		height: 100px;
@@ -851,15 +903,19 @@ a {
 	table td {
 		height: 10%;
 	}
-	#login_table {
+	#login_table, #edit_profile_table {
 		margin-left: 33%;
 	}
 	#profile_table {
 		margin-left: 40%;
 		font-size: 20px;
 	}
-	#edit_profile_table {
-		margin-left: 33%;
+	#article_table {
+		margin-left: 38%;
+	}
+	#edit_table {
+		margin-left: 32%;
+		width: 35%;
 	}
 	textarea {
 		overflow: auto;
